--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.masterthought</groupId>
     <artifactId>maven-cucumber-reporting</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>3.2.0</version>
+    <version>3.3.0-SNAPSHOT</version>
     <name>maven-cucumber-reporting</name>
     <url>http://maven.apache.org</url>
 
